* Add Aslona!
* Add new ROOM_OWNED_AREA type for generic owned rooms. Uses code similar to
  the Cathedral or Decos' house.
* Change structure of quests. Petrus now takes the encrypted scroll and gives
  you some alone time. If you chat with him again, you will receive the GC quest,
  or you can find other people to chat for other quests.
* Add some new monsters, items, artifacts and materials.
* Orcs have black blood.
* Use GitHub app for LGTM.
* Cats can be tamed with fishes.
* Make amulets easily recognizable by color.

Fixes:
* Decos no longer lets you steal from him.
* You can no longer leave the Black Market through walls.
* Display Willpower in wizard mode secrets.
* Running in wilderness now correctly takes stamina.
* Add day/night cycle to all above-ground locations.
* Enable weather effects for more above-ground locations.
* Fix some quest messages not being saved as already displayed.
* Reveal gas traps when you step on them.

Aslona:
* A new main quest will see you trying to bring peace back to the kingdom of
  Aslona, currently in the middle of a civil war.
* Add six new locations.
* Player can now have a ship to sail the oceans of worldmap. This also means
  that they can now bring pets that would normally be unable to cross the ocean
  with them.
* Moving over the ocean is slightly slower than on dry land.

Version 0.57, released 24th September 2019
------------------------------------------

Changes:
* Add Black Market, an end-game shop to spend all excess gold in.
* Add game lore and fiction to the Doc folder.
* Magic helmets spawn with random material.
* Switch some helmets from full helmet to normal.
* Keys very rarely break when used.

Fixes:
* Clean up code.
* New "expansive terrain" can help prevent blocking important entrances.
* Improve item search algorithm.
* Fix ring detection to work same as scrolls.
* Enable wishes for empty containers, make empty cans and empty bottles wishable.